[project]
name = "sun-strategy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "game-state>=2.0.0",
    "perlin-noise>=1.13",
    "pygame-ce>=2.5.3",
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true

[tool.ruff]
line-length = 79
lint.extend-select = ["ANN"]
lint.ignore = ["ANN401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 72

[tool.basedpyright]
exclude = ["**/node_modules", "**/__pycache__", "**/.*", "test*.py"]
reportImportCycles = false
reportUnnecessaryIsInstance = false
reportImplicitStringConcatenation = false
reportUnusedCallResult = false
reportMissingTypeStubs = false
reportAssignmentType = false
reportRedeclaration = false
reportAny = false
reportExplicitAny = false

[dependency-groups]
dev = [
    "basedpyright>=1.28.1",
    "isort>=6.0.1",
    "ruff>=0.11.0",
]
